--- a/index.html
+++ b/index.html
@@ -63,3 +63,21 @@
             <label for="startInput">から</label>
             <input type="text" id="endInput" inputmode="decimal">
             <label for="endInput">まで</label>
+            <button class="button-style" onclick="updateTable()">表示</button>
+          </div>
+      </div>
+      <div class="item2">
+        <table id="table"></table>
+      </div>
+     </div>
+    
+    <div class="footer">
+        <div class="twitter">誤記・不具合等の連絡は
+          <a href="https://twitter.com/shida_23_" target="_blank">こちら
+          <i class="fa-brands fa-twitter"></i>
+          </a>へ
+          <p class="attention">※数字は半角で入力してください</p>
+        </div>
+    </div>
+  <script src="script.js"></script>
+  </body>
