--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
   <meta name="twitter:title" content="乃木フラ 平均経験値確認用">
   <meta name="twitter:image" content="https://shida23.github.io/ngfr-rankexp/card.png">
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-NPQQ5SW3QG"></script>
+  <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-NPQQ5SW3QG');
+  </script>
   <style>
    * {
       margin: 0;
