--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link rel="icon" href="favicon.ico" type="image/x-icon">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="乃木フラ 平均経験値確認用">
+  <title>乃木フラ 平均経験値確認用</title>
   <meta name="twitter:image" content="https://shida23.github.io/ngfr-rankexp/card.png">
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-NPQQ5SW3QG"></script>
   <script>
