--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
   <link rel="stylesheet" href="style.css">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="乃木フラ 平均経験値確認用">
+  <meta name="description" content="「1時間あたりの平均経験値」を計算するツールです。マンスリーパスなどによって倍率が異なるのでゲーム内で各自確認してからご利用ください。">
   <link rel="icon" href="images/favicon.ico" type="image/x-icon">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="twitter:image" content="https://shida23.github.io/ngfr-rankexp/images/card.png">
   <link href="https://use.fontawesome.com/releases/v6.5.2/css/all.css" rel="stylesheet">
+  <meta name="twitter:image" content="https://shida23.github.io/ngfr-rankexp/images/card.png">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap">
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
   <script src="https://cdn.datatables.net/1.10.24/js/jquery.dataTables.min.js"></script>
