--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="style.css">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="乃木フラ 平均経験値確認用">
-  <meta name="description" content="「1時間あたりの平均経験値」を計算するツールです。マンスリーパスなどによって倍率が異なるのでゲーム内で各自確認してからご利用ください。">
+  <meta name="description" content="ランク上げに重要な【入手経験値】の上振れ値が確認出来るツールです。マンスリーパスなどによって倍率が異なるのでゲーム内で各自確認してからご利用ください。">
   <link rel="icon" href="images/favicon.ico" type="image/x-icon">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://use.fontawesome.com/releases/v6.5.2/css/all.css" rel="stylesheet">
