--- a/index.html
+++ b/index.html
@@ -75,6 +75,10 @@
        その状態の&#9314;[ライブ回数/時間]を【理想回数】と表記しています。
        プロデュース画面の[ライブ回数/時間]と照らし合わせて下さい。
     </p>
+    <p>
+      なお、ステージ61(理想回数=3600/110=32.7272...)の集計において、
+      回数は切り捨ての方に収束しているため、このサイトでは割り切れない【理想回数】を切り捨てで計算しています。
+    </p>
     <img src="images/ideal.png" alt="ideal image" style="width:100%;">
     <table>
       <thead>
@@ -100,6 +104,7 @@
         <tr><td>1～5</td><td>94</td></tr>
       </tbody>
     </table>
+    
   </div>
 
   <div id="infoModal" class="modal">
