--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         <tr><td>1～5</td><td>94</td></tr>
       </tbody>
     </table>
-    
+    <img src="images/average.png" alt="average image" style="width:100%;">
   </div>
 
   <div id="infoModal" class="modal">
