--- a/index.html
+++ b/index.html
@@ -75,11 +75,13 @@
        その状態の&#9314;[ライブ回数/時間]を【理想回数】と表記しています。
        プロデュース画面の[ライブ回数/時間]と照らし合わせて下さい。
     </p>
+    <img src="images/ideal.png" alt="ideal image" style="width:100%;">
     <p>
-      なお、ステージ61(理想回数=3600/110=32.7272...)の集計において、
+      なお、ステージ61(理想回数=3600/110=32.727...)とステージ260(理想回数=3600/130=27.692...)の集計において、
       回数は切り捨ての方に収束しているため、このサイトでは割り切れない【理想回数】を切り捨てで計算しています。
     </p>
-    <img src="images/ideal.png" alt="ideal image" style="width:100%;">
+    <img src="images/61average.png" alt="average image" style="width:100%;">
+    <img src="images/260average.png" alt="average image" style="width:100%;">
     <table>
       <thead>
         <tr>
@@ -104,7 +106,6 @@
         <tr><td>1～5</td><td>94</td></tr>
       </tbody>
     </table>
-    <img src="images/average.png" alt="average image" style="width:100%;">
   </div>
 
   <div id="infoModal" class="modal">
