--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     <div class="attention">
       <p>数字は半角で入力してください</p>
       <p>表を幅広く見たい方は横画面を推奨します</p>
-      <p>回数を切り捨てて計算している理由は【理想回数について】の中に記述しています</p>
+      <p>回数を切り捨てて計算する理由は【理想回数について】の中に記述しています</p>
     </div>
     <div class="twitter">誤記・不具合等の連絡は
       <a href="https://x.com/shida_23_" target="_blank">こちら
