--- a/index.html
+++ b/index.html
@@ -2,137 +2,131 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>乃木フラ 平均経験値確認</title>
+  <title>乃木フラ 平均経験値確認ツール</title>
   <link rel="stylesheet" href="style.css">
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="乃木フラ 平均経験値確認用">
-  <meta name="description" content="ランク上げに重要な【入手経験値】の上振れ値が確認出来るツールです。マンスリーパスなどによって倍率が異なるのでゲーム内で各自確認してからご利用ください。">
   <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+  <meta name="twitter:title" content="乃木フラ 平均経験値確認ツール">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://use.fontawesome.com/releases/v6.5.2/css/all.css" rel="stylesheet">
   <meta name="twitter:image" content="https://shida23.github.io/ngfr-rankexp/images/card.png">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap">
-  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-  <script src="https://cdn.datatables.net/1.10.24/js/jquery.dataTables.min.js"></script>
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-NPQQ5SW3QG"></script>
-  <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-      gtag('config', 'G-NPQQ5SW3QG');
-  </script>
+  <link rel="stylesheet" href="https://cdn.datatables.net/1.13.6/css/jquery.dataTables.min.css">
 </head>
 <body>
-  <h1>乃木フラ 平均経験値確認</h1>
-  <form id="settingsForm">
-    <div class="form-group">
-      <P class="section">曜日選択</p>
-        <div class="radio-group">
-          <label><input type="radio" name="day" value="1" checked> 水・日(等倍)</label>
-          <label><input type="radio" name="day" value="1.5"> 月・木・金(1.5倍)</label>
-          <label><input type="radio" name="day" value="2.5"> 火・土(2.5倍)</label>
-          <label><input type="radio" name="day" value="4"> 4倍イベント</label>
-        </div>
+  <div class="form-area">
+    <p>曜日選択</p>
+    <div class="radio-area">
+      <label><input type="radio" name="dayMultiplier" value="1" checked> 水・日(等倍)</label>
+      <label><input type="radio" name="dayMultiplier" value="1.5"> 月・木・金(1.5倍)</label>
+      <label><input type="radio" name="dayMultiplier" value="2.5"> 火・土(2.5倍)</label>
+      <label><input type="radio" name="dayMultiplier" value="4"> 4倍イベント</label>
     </div>
-    <div class="form-group">
-      <div class="section-group">
-        <p class="section">倍率指定</p>
-        <i class="fa-solid fa-circle-info" id="infoButton"></i>
-      </div>
-      <div class="multi-group">
-        経験値ボーナス：<input type="text" id="bonus" name="bonus" inputmode="decimal">％
-      </div>
-      <div class="form-group slider-container multi-group">
-        <label for="rangeslider">上振れ補正</label>
-        <input type="range" id="rangeslider" name="rangeslider" min="0" max="5" step="0.5" value="0">
-        ＋<span id="range-number">0</span>[%]
-      </div>
+  
+    <p>倍率指定</p>
+    <div class="multi-area">
+      <label>経験値ボーナス：<input type="text" id="bonus" inputmode="decimal">[%]</label>
+      <label>上振れ補正：
+        <span id="rangeValue">+0[%]</span>
+        <input type="range" id="range" min="0" max="5" step="0.5" value="0" oninput="document.getElementById('rangeValue').innerText = '+' + this.value + '[%]'">
+      </label>
     </div>
-    <div class="form-group">
-      <p class="section">ステージ範囲指定</p>
-      <div class="range-group">
-        <input type="text" id="start" name="start" inputmode="decimal"><span class="range-text">から</span>
-        <input type="text" id="end" name="end" inputmode="decimal"><span class="range-text">まで</span>
-      </div>
+  
+    <p>ステージ範囲指定</p>
+    <div class="stage-area">
+      <input type="text" id="startRange" inputmode="decimal">から
+      <input type="text" id="endRange" inputmode="decimal">まで
     </div>
-    <button type="button" id="displayButton">表示</button>
-  </form>
-  <div class="table-container">
-    <table id="resultTable" class="display" style="width:100%">
-      <thead>
-        <tr></tr>
-      </thead>
+
+    <div class="button-area">
+      <button type="button" id="displayButton">表示</button>
+    </div>
+
+    <table id="xpTable">
+      <thead></thead>
       <tbody></tbody>
     </table>
   </div>
 
-  <button class="accordion">理想回数について<span class="icon">+</span></button>
-  <div class="panel">
-    <p>各ステージに設けられている&#9312;[目標クリア秒数/ライブ]以内で15回連続成功すると
-       &#9313;[平均時間/回]が最短になります。
-    </p>
-    <p>
-       その状態の&#9314;[ライブ回数/時間]を【理想回数】と表記しています。
-       プロデュース画面の[ライブ回数/時間]と照らし合わせて下さい。
-    </p>
-    <img src="images/ideal.png" alt="ideal image" style="width:100%;">
-    <p>
-      なお、ステージ61(理想回数=3600/110=32.727...)とステージ260(理想回数=3600/130=27.692...)の集計において、
-      回数は切り捨ての方に収束しているため、このサイトでは割り切れない【理想回数】を切り捨てで計算しています。
-    </p>
-    <img src="images/61average.png" alt="average image" style="width:100%;">
-    <img src="images/260average.png" alt="average image" style="width:100%;">
-    <table>
-      <thead>
-        <tr>
-          <th>ステージ</th><th>理想回数</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr><td>260～</td><td>27</td></tr>
-        <tr><td>150～259</td><td>30</td></tr>
-        <tr><td>61～149</td><td>32</td></tr>
-        <tr><td>56～60</td><td>34</td></tr>
-        <tr><td>51～55</td><td>36</td></tr>
-        <tr><td>46～50</td><td>39</td></tr>
-        <tr><td>41～45</td><td>41</td></tr>
-        <tr><td>36～40</td><td>45</td></tr>
-        <tr><td>31～35</td><td>48</td></tr>
-        <tr><td>26～30</td><td>52</td></tr>
-        <tr><td>21～25</td><td>58</td></tr>
-        <tr><td>16～20</td><td>64</td></tr>
-        <tr><td>11～15</td><td>72</td></tr>
-        <tr><td>6～10</td><td>81</td></tr>
-        <tr><td>1～5</td><td>94</td></tr>
-      </tbody>
-    </table>
-  </div>
+  <footer class="accordion-footer">
+    <div class="footer-header" id="footerToggle">説明書 ▼</div>
+    <div class="footer-content">
+      <h3>はじめに</h3>
+      <p>
+        数字は半角で入力してください。
+      </p>
+      <p>
+        ステージ範囲指定は片方空白でも使用出来ます。
+      </p>
+      <p>
+        誤記、不具合等は<a href="https://x.com/shida_23_" target="_blank">こちら(<i class="fa-brands fa-x-twitter"></i>)</a>へ
+      </p>
+    </div>
 
-  <div id="infoModal" class="modal">
-    <div class="modal-content">
-      <span class="close">&times;</span>
-      <h2>経験値ボーナス</h2>
-      <p>プロデュース画面の経験値ボーナスの数値をそのまま記入してください。</p>
-      <p>(画像赤枠参照、この場合は51.7と入力)</p>
-      <img src="images/multi-info.png" alt="multi-info image" style="width:100%;">
-      <h2>上振れ補正</h2>
-      <p>私調べですが、プロデュース画面の1番上の項目[経験値入手/時間]の数値において±5%前後の振れを確認しています。上振れ具合の確認用に導入しました。</p>
+    <div class="footer-content">
+      <h3>経験値ボーナス</h3>
+      <p>
+        プロデュース画面の◢BONUSの経験値の数値を数値をそのまま記入してください。
+      </p>
+      <p>
+        (画像の赤枠参照、この場合は53.3と入力)
+      </p>
+      <img src="images/bonus.PNG" alt="bonus image">
     </div>
-  </div>
-  
-  <div class="footer">
-    <div class="attention">
-      <p>数字は半角で入力してください</p>
-      <p>表を幅広く見たい方は横画面を推奨します</p>
-      <p>回数を切り捨てて計算する理由は【理想回数について】の中に記述しています</p>
+
+    <div class="footer-content">
+      <h3>上振れ補正</h3>
+      <p>
+        独自の調査ですが、プロデュース画面の一番上の項目[経験値入手/時間]の数値において±5%前後の振れを確認しています。
+      </p>
+      <p>
+        ある程度粘っても見れるのはせいぜい+2~3%ですが、それでも数値としてはかなり変わるので時間に余裕があるときは粘ってみても良いかと思います。
+      </p>
     </div>
-    <div class="twitter">誤記・不具合等の連絡は
-      <a href="https://x.com/shida_23_" target="_blank">こちら
-        <i class="fa-brands fa-x-twitter"></i>(
-        <i class="fa-brands fa-twitter"></i>)
-      </a>へ
+
+    <div class="footer-content">
+      <h3>理想回数</h3>
+      <p>
+        ①[目標クリア秒数/ライブ]以内で15回連続成功すると②[平均時間/回]が最短になります。
+      </p>
+      <p>
+        各ステージで目標クリア秒数は異なるため、その状態の③[ライブ回数/時間]をこのページでは【<span style="font-weight:bold;">理想回数</span>】と表記しています。
+      </p>
+      <img src="images/ideal.PNG" alt="ideal image">
+      <p>
+        ①が110秒や130秒などの場合、理想回数は割り切れなくなりますが、ステージ61(理想回数：3600/110=32.727…)、ステージ260(理想回数：3600/130=27.692…)の集計において、どちらも切り捨てた数値に収束しているため、このページでは【理想回数】を切り捨てて計算しています。
+      </p>
+      <img src="images/61average.png" alt="61average image">
+      <img src="images/260average.png" alt="260average image">
+      <table id="idalTable">
+        <thead>
+          <tr>
+            <th>ステージ</th><th>理想回数</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr><td>260～</td><td>27</td></tr>
+          <tr><td>150～259</td><td>30</td></tr>
+          <tr><td>61～149</td><td>32</td></tr>
+          <tr><td>56～60</td><td>34</td></tr>
+          <tr><td>51～55</td><td>36</td></tr>
+          <tr><td>46～50</td><td>39</td></tr>
+          <tr><td>41～45</td><td>41</td></tr>
+          <tr><td>36～40</td><td>45</td></tr>
+          <tr><td>31～35</td><td>48</td></tr>
+          <tr><td>26～30</td><td>52</td></tr>
+          <tr><td>21～25</td><td>58</td></tr>
+          <tr><td>16～20</td><td>64</td></tr>
+          <tr><td>11～15</td><td>72</td></tr>
+          <tr><td>6～10</td><td>81</td></tr>
+          <tr><td>1～5</td><td>94</td></tr>
+        </tbody>
+      </table>
     </div>
-  </div>
-<script src="script.js"></script>
+  </footer>
+
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js"></script>
+  <script src="https://cdn.datatables.net/fixedcolumns/4.3.0/js/dataTables.fixedColumns.min.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
