保存機能の追記

--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
         ステージ範囲指定は片方空白でも使用出来ます。
       </p>
       <p>
+        入力した数値は端末に保存されるようになっていますが、プライベートモードやシークレットモードでは正常に機能しない場合があります。
+      </p>
+      <p>
         誤記、不具合等は<a href="https://x.com/shida_23_" target="_blank">こちら(<i class="fa-brands fa-x-twitter"></i>)</a>へ
       </p>
     </div>
