入力情報のローカル保存について

--- a/index.html
+++ b/index.html
@@ -84,6 +84,9 @@
       <p>
         ある程度粘っても見れるのはせいぜい+2~3%ですが、それでも数値としてはかなり変わるので時間に余裕があるときは粘ってみても良いかと思います。
       </p>
+      <p>
+        運に自信のある方は5%超え狙ってみてください。
+      </p>
     </div>
 
     <div class="footer-content">
